# django-template-simplify

./: README.md  pyproject.toml
docs/source/: conf.py  getting_started.md  index.rst  install.md
src/template_simplify/: __init__.py
src/template_simplify/templatetags/: template_simplify.py
tests/: conftest.py  test_tags.py
