[tool.poetry]
name = "django-template-simplify"
version = "1.0.1"
description = "A set of tools to help simplify your Django templates."
authors = ["Michael Yin <michaelyin@accordbox.com>"]
license = "MIT"
homepage = "https://github.com/rails-inspire-django/django-template-simplify"
readme = "README.md"
packages = [{ include = "template_simplify", from = "src" }]

[tool.poetry.urls]
Changelog = "https://github.com/rails-inspire-django/django-template-simplify/releases"

[tool.poetry.dependencies]
python = ">=3.8"
django = ">=3.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["setuptools", "poetry_core>=1.0"]
build-backend = "poetry.core.masonry.api"
